# FastAPI

./: .coverage  .env  0.0.18  Dockerfile  README.md  compose.yaml  database.db  dev_web.md  entrypoint.sh  pyproject.toml
.github/workflows/: pipeline.yaml
fast_zero/: app.py  database.py  models.py  pdf_extractor.py  schemas.py  security.py  settings.py
fast_zero/routers/: __init__.py  auth.py  pdf.py  todo.py  todos.py  users.py
migrations/versions/: a67e4a5eadad_create_users_table.py  ac4d7406adfd_create_todos_table.py
tests/: conftest.py  test_app.py  test_auth.py  test_db.py  test_security.py  test_todo.py  test_todos.py  test_users,py  test_users.py
