[tool.poetry]
name = "fast_api_zero"
version = "0.1.0"
description = ""
authors = ["RaissaAndradeS <221035077@aluno.unb.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.*"
fastapi = "^0.111.1"


[tool.poetry.group.dev.dependencies]
ruff = "^0.5.6"

[tool.ruff]
line-length = 79
extend-exclude = ['migrations']

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
